Adapt for Syberia
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: DennySPb <dennyspb@gmail.com>
Change-Id: Ia48212382e23610fb3bec80633ea843a6d796eca

--- a/app/src/main/res/xml/gaming_dashboard_fragment.xml
+++ b/app/src/main/res/xml/gaming_dashboard_fragment.xml
@@ -24,7 +24,7 @@
         android:selectable="false"
         android:persistent="false" />
 
-    <com.krypton.settings.preference.SystemSettingMainSwitchPreference
+    <com.syberia.settings.preference.SystemSettingMainSwitchPreference
         android:key="gaming_mode_enabled"
         android:title="@string/enable_gaming_mode"
         android:defaultValue="false" />
@@ -36,7 +36,7 @@
         android:fragment="org.exthmui.game.fragment.GamingModeAppListFragment"
         android:persistent="false" />
 
-    <com.krypton.settings.preference.SystemSettingSwitchPreference
+    <com.syberia.settings.preference.SystemSettingSwitchPreference
         android:key="gaming_mode_dynamic_add"
         android:title="@string/gaming_mode_dynamic_add_title"
         android:summary="@string/gaming_mode_dynamic_add_summary"
@@ -55,7 +55,7 @@
         android:fragment="org.exthmui.game.fragment.NotificationOverlaySettingsFragment"
         android:persistent="false" />
 
-    <com.krypton.settings.preference.CustomSeekBarPreference
+    <com.syberia.settings.preference.CustomSeekBarPreference
         android:key="gaming_mode_menu_opacity"
         android:title="@string/gaming_mode_menu_opacity_title"
         android:defaultValue="75"
@@ -73,7 +73,7 @@
             android:summary="@string/gaming_mode_change_performance_summary"
             android:defaultValue="true" />
 
-        <com.krypton.settings.preference.CustomSeekBarPreference
+        <com.syberia.settings.preference.CustomSeekBarPreference
             android:key="gaming_mode_performance_level"
             android:title="@string/gaming_mode_performance_title"
             android:dependency="gaming_mode_change_performance_level"
@@ -85,7 +85,7 @@
     <PreferenceCategory
         android:title="@string/gaming_mode_dnd">
 
-        <com.krypton.settings.preference.SystemSettingSwitchPreference
+        <com.syberia.settings.preference.SystemSettingSwitchPreference
             android:key="gaming_mode_disable_notification_alert"
             android:title="@string/gaming_mode_disable_notification_alert_title"
             android:summary="@string/gaming_mode_disable_notification_alert_summary"
@@ -117,7 +117,7 @@
     <PreferenceCategory
         android:title="@string/gaming_mode_miscellaneous">
 
-        <com.krypton.settings.preference.SystemSettingSwitchPreference
+        <com.syberia.settings.preference.SystemSettingSwitchPreference
             android:key="gaming_mode_disable_adb"
             android:title="@string/gaming_mode_disable_adb_title"
             android:defaultValue="false" />
